--- a/common/languages/cs.xml
+++ b/common/languages/cs.xml
@@ -816,7 +816,7 @@
 		<string name="fox_save_load_aromafm_config_chk">Save/load AromaFM settings</string>
 		<string name="search_help">Search files and folders...</string>
 		
-		<string name="reboot_to_take_effect">Reboot to changes take effect</string>
+		<string name="reboot_to_take_effect">Reboot for changes to take effect</string>
 		<string name="fox_modules_hdr">Fox Addons</string>
 		<string name="fox_modules_inst">Install addon</string>
 		<string name="backup_short_hdr">New Backup</string>
