add maintainer logo
Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/extra-languages/languages/zh_CH.xml
+++ b/extra-languages/languages/zh_CH.xml
@@ -940,7 +940,7 @@
 		
 		<string name="pass_page_block">Recovery 当前上锁方式</string>
 		<string name="pass_page_block_inf1">知道自己受到保护,</string>
-		<string name="pass_page_block_inf2">您可以休眠得更好</string>
+		<string name="pass_page_block_inf2">您可以睡的更香zzzz</string>
 		<string name="pass_page_select">请选择密码类型</string>
 		
 		<!-- Utilities -->
